imagenes, javascript, home, about me, contactme

--- a/contact.html
+++ b/contact.html
@@ -7,47 +7,69 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="icon" type="image/png" href="Imagenes/moto.jpeg">
+  <script type="text/javascript" src="jscript.js"></script>
 </head>
 <body>
-   <header class="container">
+ <header class="container">
+  <h1 class=titleC> Contact Me</h1>
+  <div class="row">
+    <h1 class="col-sm-4">Francisco José MacAllister</h1>
+    <nav class="col-sm-5 text-right" >
+      <a href="./index.html">Home</a>
+    </nav>
+    <nav class="col-sm-8 text-right">
+      <a href="./AboutMe.html">Studies</a>
+    </nav>
+    <nav class="col-sm-7 text-right">
+      <a>Other events</a>
+    </nav>
+
+  </div>
+</header>
+<section class="container">
+  <h1 class="titleC">If you would like to contact me fast and easy, push the button below!</h1>
+  <button onclick="aparecer()">Give me a poke to contact me!</button>
+  <div id="contactme">
     <div class="row">
-      <h1 class="col-sm-4">Francisco José MacAllister</h1>
-	  <nav class="col-sm-5 text-right" >
-        <a href="./index.html">Home</a>
-	  </nav>
-	  <nav class="col-sm-8 text-right">
-        <a href="./AboutMe.html">About Me</a>
-      </nav>
-	  <nav class="col-sm-7 text-right">
-        <a>Hobbies</a>
-	  </nav>
-	  
+      <figure class="col-sm-6">
+        <h3>To text me (via whatsapp)  just click the image below.</h3>
+        <a href="https://wa.me/+573044388757"><img src="./Imagenes/whatsapp.png" class="img-responsive"></a>
+      </figure>
+      <figure class="col-sm-6">
+        <h3>If you rather just email me, please click the link below!</h3>
+        <a href="mailto:fj.mac@uniandes.edu.co?subject=I would like to contact you">
+          <img src="./Imagenes/mail.png" class="img-responsive">
+        </a>
+      </figure>
     </div>
-  </header>
-  <section class="container">
-   
-   <h4 id="infoImportante">All links to social media are found at the bottom of the page <h4>
+  </div>
+  <div class="row">
+    <h1 class="titleC">If you would like to randomly go to one of my social media sites, just press the button below</h1>
+    <button onclick="randomplease()">Give me a poke to randomly get to know me</button>
+  </div>
+
+
+  <h4 id="infoImportante">All links to social media are found at the bottom of the page <h4>
   </section>
-  
+
   <footer class="container">
     <div class="row">
       <p class="col-sm-4">&copy; 2019 Francisco José MacAllister</p>
       <ul class="col-sm-8">
         <li class="col-sm-1">
          <a href="https://twitter.com/Francis02847171"> <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/twitter.svg" alt="Imagen responsiva que redirige a twitter"> </a>
-        </li>
-        <li class="col-sm-1">
-          <a href="https://www.facebook.com/mkllister"> <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/facebook.svg" alt="Imagen responsiva que redirige a facebook"> </a>
-        </li>
-        <li class="col-sm-1">
-          <a href="https://www.instagram.com/franciscomcallister/"> <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/instagram.svg" alt="Imagen responsiva que redirige a instagram"> </a>
-        </li>
-        
-      </ul>
-    </div>
-  </footer>
- </body>
-</html>
+       </li>
+       <li class="col-sm-1">
+        <a href="https://www.facebook.com/mkllister"> <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/facebook.svg" alt="Imagen responsiva que redirige a facebook"> </a>
+      </li>
+      <li class="col-sm-1">
+        <a href="https://www.instagram.com/franciscomcallister/"> <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/instagram.svg" alt="Imagen responsiva que redirige a instagram"> </a>
+      </li>
 
+    </ul>
+  </div>
+</footer>
+</body>
+</html>
 </body>
 </html>
