--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 </head>
 <body>
   <header class="container">
+    <h1 class=titleC> Home Page</h1>
     <div class="row">
       <h1 class="col-sm-4">Francisco José MacAllister</h1>
       <nav class="col-sm-6 text-right" >
-        <a href="./AboutMe.html">About Me</a>
+        <a href="./AboutMe.html">Studies</a>
 	  </nav>
 	  <nav class="col-sm-7 text-right">
-        <a>Hobbies</a>
+        <a>Other events</a>
 	  </nav>
 	  <nav class="col-sm-8 text-right">
         <a href="./contact.html">Contact</a>
@@ -33,25 +34,25 @@
     </div>
   </section>
   <section class="container">
+    <h1 class="titleC">… Here is a little about me…</h1>
     <div class="row">
       <figure class="col-sm-6">
-        <p>kitchen</p>
-        <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/kitchen.jpg"/>
+        <p>My family</p>
+        <img style="width:550px;height:400px" src="./Imagenes/familia.jpeg" class="img-responsive"/>
       </figure>
       <figure class="col-sm-6">
-        <p>woodwork</p>
-        <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/woodwork.jpg"/>
+        <p>My new dog</p>
+        <img style="width:550px;height:400px" src="./Imagenes/perro.jpeg" class="img-responsive"/>
       </figure>
     </div>
     <div class="row">
       <figure class="col-sm-6">
-        <p>gifts</p>
-        <img src="
-https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/gifts.jpg"/>
+        <p>My favorite food</p>
+        <img style="width:550px;height:400px" src="./Imagenes/pizza.jpg" class="img-responsive"/>
       </figure>
       <figure class="col-sm-6">
-        <p>antiques</p>
-        <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/antique.jpg"/>
+        <p>My favorite hobby</p>
+        <img style="width:550px;height:400px" src="./Imagenes/motocross.jpg" class="img-responsive"/>
       </figure>
     </div>
   </section>
