cambios a ultima pagina

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
       <a href="./AboutMe.html">Studies</a>
     </nav>
     <nav class="col-sm-7 text-right">
-      <a>Other events</a>
+      <a href="./more.html">Other events</a>
     </nav>
 
   </div>
