--- a/more.html
+++ b/more.html
@@ -10,14 +10,14 @@
 </head>
 <body>
  <header class="container">
-  <h1 class=titleC> My Studies</h1>
+  <h1 class=titleC> More About Me</h1>
   <div class="row">
     <h1 class="col-sm-4">Francisco José MacAllister</h1>
     <nav class="col-sm-5 text-right" >
       <a href="./index.html">Home</a>
     </nav>
     <nav class="col-sm-7 text-right">
-      <a href="./more.html">Other events</a>
+      <a href="./AboutMe.html">About me</a>
     </nav>
     <nav class="col-sm-8 text-right">
       <a href="./contact.html">Contact</a>
@@ -27,25 +27,25 @@
 <section class="container">
   <div class="row">
     <figure class="col-sm-6">
-      <h4>2001-2015</h4>
-      <img style="width:550px;height:300px" src="Imagenes/nogales.jpg" alt="Photograph of the arts building at Colegio Los Nogales" class="img-responsive"/>
+      <h4>Camp Tawingo</h4>
+      <img style="width:550px;height:300px" src="Imagenes/tawingocamp.jpg" alt="Photograph of the main building at camp tawingo" class="img-responsive"/>
     </figure>
     <figure class="col-sm-6 ml-auto">
-      <h4>Colegio Los Nogales</h4>
       <div class="parrafo">
-        <p>I was born and raised in Bogotá, Colombia. I did my primary and elementary studies at Colegio Los Nogales. Here I did several sports like Roller Hockey, Basketball and Athletics. When I was older, I joined the martial band. I was a first row trumpet for several years and then at my last year I was elected as the trumpets leader by popular vote. I got to play solos multiple times and directed not only all of the trumpets, but also the entire band. This was the first time I noticed that I has skills being a group leather. I got to co-lead about 120 people to play in front of thousands on my last day of school and it was a complete success. What I enjoyed most wasn’t playing trumpet solos, but leading and guiding everyone to make a great final presentation.</p>
+        <h4>Experiences at Camp</h4>
+        <p>For about two years I assisted Camp Tawingo as a camper. There, you can apply to be back as a counsellor, and depending on your skills you may or may not be called back. Fortunately, they really liked my people skills among other abilities. I was very helpful when teaching campcraft skills or canoeing. For this reason, I was a counsellor there for 2 years in a row. I had to stop because the third season of camp was on the month of august, which was unfortunate because classes at university started. It was much harder to skip those classes that the ones at school, so I had to decide to not go back to camp. </p>
       </div>
     </figure>
   </div>
   <div class="row">
     <figure class="col-sm-6">
-      <h4>2015-2020</h4>
-      <img style="width:550px;height:300px" src="Imagenes/andes.jpg" alt="Photograph of the main building at the University of the Andes (Mario Laserna building)." class="img-responsive"/>
+      <h4>Motorcycle riding</h4>
+      <img style="width:550px;height:300px" src="Imagenes/honda.jpg" alt="Picture of a small honda motorcycle" class="img-responsive"/>
     </figure>
     <figure class="col-sm-6">
-      <h4>Universidad de Los Andes</h4>
+      <h4>Experiences at motorcycle riding</h4>
       <div class="parrafo">
-        <p>When I graduated, I wasn’t sure what I wanted to study. I was deciding between business management, economics, and computer science. For this reason, I got into Industrial engineering. This career had some things of all of the above. When I had my first programming course at the university, I decided that I had to enroll in computer science too. (Ingenieria de sistemas). From this point, I have been assistant at multiple programming courses and I have had excellent performance in both careers. Here I have had multiple teams to work with, and the skills I developed years ago back in school have been very helpful. Currently I’m a year away from graduating both careers.</p>
+        <p>Since I was very small (about 3 years old), I always asked my parents if I could get a motorcycle. I was practically in love with them since both my oldest brothers had at least one. When I was 5 years old, Santa brought me my first motorcycle. It was a small 50cc semi-automatic motorcycle. Up to this day, this one is my favorite by far since it is the least dangerous and the easiest one to use. Here I have taught my small nephew in this motorcycle and now I ride along him like my brother did with me 17 years ago. I think this sport is one of the most relaxing to do when you just ride along with friends.</p>
       </div>
     </figure>
   </div>
