--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <h1 class="col-sm-4">Francisco José MacAllister</h1>
       <nav class="col-sm-6 text-right" >
         <a href="./AboutMe.html">Studies</a>
-	  </nav>
-	  <nav class="col-sm-7 text-right">
-        <a>Other events</a>
-	  </nav>
-	  <nav class="col-sm-8 text-right">
+      </nav>
+      <nav class="col-sm-7 text-right">
+        <a href="./more.html">Other events</a>
+      </nav>
+      <nav class="col-sm-8 text-right">
         <a href="./contact.html">Contact</a>
       </nav>
     </div>
@@ -56,7 +56,7 @@
       </figure>
     </div>
   </section>
- </body>
+</body>
 </html>
 
 </body>
