Añadir meta y estilo de las imágenes
La metadata ayuda para SEO.
El estilo (tamaño) de las imágenes es mejor hacerlo en el archivo css.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <title>Francisco José MacAllister</title>
   <meta charset="utf-8"/>
+  <!-- maria-ocampo: Sería bueno poner una descripción, autor y keywords -->
+  <meta name="description" content="Personal web page Francisco Jose MacAllister">
+  <meta name="keywords" content="HTML,CSS,Personal,JavaScript">
+  <meta name="author" content="Francisco Jose MacAllister">
+  
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="main.css">
@@ -34,6 +39,7 @@
     </div>
   </section>
   <section class="container">
+    <!-- maria-ocampo: Es recomendable hacer los ajustes del tamaño de las imágenes en el archivo css-->
     <h1 class="titleC">… Here is a little about me…</h1>
     <div class="row">
       <figure class="col-sm-6">
