Agregar alt a las imgs

--- a/index.html
+++ b/index.html
@@ -34,25 +34,26 @@
     </div>
   </section>
   <section class="container">
+    <!-- maria-ocampo: Todas las imágenes deberían tener un alt-->
     <h1 class="titleC">… Here is a little about me…</h1>
     <div class="row">
       <figure class="col-sm-6">
         <p>My family</p>
-        <img style="width:550px;height:400px" src="./Imagenes/familia.jpeg" class="img-responsive"/>
+        <img style="width:550px;height:400px" src="./Imagenes/familia.jpeg" alt="My family" class="img-responsive"/>
       </figure>
       <figure class="col-sm-6">
         <p>My new dog</p>
-        <img style="width:550px;height:400px" src="./Imagenes/perro.jpeg" class="img-responsive"/>
+        <img style="width:550px;height:400px" src="./Imagenes/perro.jpeg" alt="Dog" class="img-responsive"/>
       </figure>
     </div>
     <div class="row">
       <figure class="col-sm-6">
         <p>My favorite food</p>
-        <img style="width:550px;height:400px" src="./Imagenes/pizza.jpg" class="img-responsive"/>
+        <img style="width:550px;height:400px" src="./Imagenes/pizza.jpg" alt="Pizza" class="img-responsive"/>
       </figure>
       <figure class="col-sm-6">
         <p>My favorite hobby</p>
-        <img style="width:550px;height:400px" src="./Imagenes/motocross.jpg" class="img-responsive"/>
+        <img style="width:550px;height:400px" src="./Imagenes/motocross.jpg" alt="Motocross" class="img-responsive"/>
       </figure>
     </div>
   </section>
