Comentarios en el código

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="icon" type="image/png" href="Imagenes/moto.jpeg">
 </head>
+<!-- maria-ocampo: Sería bueno que el código tuviera comentarios. Ej: Sección A -->
 <body>
  <header class="container">
   <h1 class=titleC> My Studies</h1>
